.itmtk styles modified (width 100% etc.)
svn changeset:407 branch:toolkit

--- a/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
@@ -45,6 +45,9 @@
 
 .itmtk {
     background: #e7eaf0 url(../img/common/application_bg.png) repeat-x 0 0;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 .itmtk .popup *,
 .itmtk .popup .border {
