--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -1,5 +1,5 @@
 /* Debug styles */
-.uidl {
+.itmtk .uidl {
 	position: absolute;
 	z-index: 1001;
 	text-indent: 18px;
@@ -10,7 +10,7 @@
 	margin-left: -10px;
 }
 
-div#ajax-wait {
+.itmtk div#ajax-wait {
 	top:1px;
 	right:1px;
 	cursor:wait;
@@ -30,12 +30,13 @@ div#ajax-wait {
 }
 
 /* General styles */
-html {
+.itmtk {
     background-color: ThreeDFace;
 }
 .itmtk input,
 .itmtk select,
-.itmtk button, html {
+.itmtk button, 
+.itmtk {
     font-family: Tahoma, sans-serif; 
     font-size: 8pt;
     font-weight: normal;
