--- a/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
@@ -351,17 +351,22 @@
 
 .itmtk .table,
 .itmtk .table-paging,
-.itmtk .list .content {
+.itmtk .list .content,
+.itmtk .popup .border {
 	border: none;
+	padding: 0;
 }
 .itmtk .table .border,
 .itmtk .table-paging .border,
-.itmtk .list .outset {
+.itmtk .list .border {
 	background-color: white;
-	border-top:					none;
-	border-right:				solid 2px #aaacbc;
-	border-bottom:				solid 2px #9193a0;
-	border-left:				solid 2px #d3d4dc;
+	border-top: none;
+	border-right: solid 2px #aaacbc;
+	border-bottom: solid 2px #9193a0;
+	border-left: solid 2px #d3d4dc;
+}
+.itmtk .list .outset {
+	border: none;
 }
 .itmtk .table .tablecaption,
 .itmtk .table-paging .tablecaption,
@@ -370,9 +375,66 @@
 	height: 15px;
 	color: white;
 	padding: 5px 7px;
-	spacing: 0;
 	font-weight: bold;
 	border: 1px solid #a3b5ce;
+}
+
+/* Column selector styles */
+.itmtk .table .colsel {
+	margin:0;
+	padding:0;
+	width: auto;
+	height: 25px;
+	border: none;
+	border-bottom: solid 1px #85a2c5;
+	border-top: solid 2px #d3dce7;
+	position: static;
+}
+.itmtk .table-paging .scroll,
+.itmtk .list .scroll {
+	margin:0;
+	padding:0;
+	position: static;
+}
+.itmtk .table .colsel div {
+	width: 13px;
+	height: 13px;
+	background: transparent url(../img/table/column_select_arrow.png) no-repeat;
+	margin: 5px 3px;
+}
+.itmtk .table .popup,
+.itmtk .table-paging .popup,
+.itmtk .list .popup {
+	border: solid 1px #d3d4dc;
+	/* TODO IE7 hack, fix */
+	width: 110px;
+	overflow: visible;
+}
+.itmtk .table .popup .border,
+.itmtk .table-paging .popup .border,
+.itmtk .list .popup .border {
+	border: none;
+}
+.itmtk .table .popup .item,
+.itmtk .table-paging .popup .item,
+.itmtk .list .popup .item {
+	border-top: solid 1px #d3d4dc;
+	text-align: left;
+	padding: 3px 18px;
+	color: #2c3437;
+}
+.itmtk .table .popup .off,
+.itmtk .table-paging .popup .off,
+.itmtk .list .popup .off {
+	background: transparent url(../img/common/unchecked.png) no-repeat 1px 0.2em;
+}
+.itmtk .table .popup .on,
+.itmtk .table-paging .popup .on,
+.itmtk .list .popup .on {
+	background: transparent url(../img/common/checked.png) no-repeat 1px 0.2em;
+}
+.itmtk .table .popup .item.over {
+	background-color: #faffd1;
 }
 
 /* Scroll table style */
@@ -424,22 +486,6 @@
 .itmtk .table .cin td.tablecell div.cellContent {
 	border-right-color: #e3e7f0;
 }
-.itmtk .table .colsel {
-	margin:0;
-	padding:0;
-	width: auto;
-	height: 25px;
-	border: none;
-	border-bottom: solid 1px #85a2c5;
-	border-top: solid 2px #d3dce7;
-	position: static;
-}
-.itmtk .table .colsel div {
-	width: 13px;
-	height: 13px;
-	background: transparent url(../img/table/column_select_arrow.png) no-repeat;
-	margin: 5px 3px;
-}
 .itmtk .table .cout div.spacer {
 	background-color: #fff;
 }
@@ -447,37 +493,67 @@
 	text-align: center;
 	background-color: #fbffdc;
 }
-.itmtk .table .colsel-container {
-	
+
+
+/* Paging table styles */
+.itmtk .table-paging .content {
+	padding: 0;
 }
-.itmtk .table .popup {
-	border: solid 1px #d3d4dc;
-	/* TODO IE7 hack, fix */
-	width: 110px;
-	overflow: visible;
+.itmtk .table-paging .content table {
+	width: 100%;
 }
-.itmtk .table .popup .border {
+.itmtk .table-paging .header {
+	background: #d4e7fe url(../img/table/column_header_bg.png) repeat-x;
+	border-bottom: solid 1px #85a2c5;
+	height: 25px;
+}
+.itmtk .table-paging .header .caption {
+	color: #48738c;
+}
+.itmtk .table-paging .cheader {
+	border-right: solid 1px #b4cfe9;
+	border-left: solid 1px #f3f9ff;
+	padding: 0 0 0 4px;
+}
+.itmtk .table-paging td.asc {
+	background: transparent url(../img/table/order_asc.png) no-repeat 95% 50%;
+}
+.itmtk .table-paging td.desc {
+	background: transparent url(../img/table/order_desc.png) no-repeat 95% 50%;
+}
+.itmtk .table-paging .odd td,
+.itmtk .table-paging .even td {
+	padding: 2px 2px 2px 4px;
+	border-right: solid 1px #e3e7f0;
+	background: transparent;
+}
+.itmtk .table-paging .even td div,
+.itmtk .table-paging .odd td div {
+	border-left: none;
+	background: transparent;
+}
+.itmtk .table-paging .odd {
+	background-color: #f0f4f9;
+}
+.itmtk .table-paging tr.selected {
+	font-weight: normal;
+	background-color: #faffd1;
+	color: #2c3437;
 	border: none;
 }
-.itmtk .table .popup .item {
-	border-top: solid 1px #d3d4dc;
-	text-align: left;
-	padding: 3px 18px;
+.itmtk .table-paging tr.selected td div{
 	color: #2c3437;
 }
-.itmtk .table .popup .off {
-	background: transparent url(../img/common/unchecked.png) no-repeat 1px 0.2em;
+.itmtk .table-paging .nav {
+	text-align: center;
+	border-top: solid 1px #85a2c5;
+	padding: 3px 0;
+	font-weight: bold;
 }
-.itmtk .table .popup .on {
-	background: transparent url(../img/common/checked.png) no-repeat 1px 0.2em;
+.itmtk .table-paging .current {
+	padding: 0 20px;
+	font-weight: normal;
 }
-.itmtk .table .popup .item img {
-	display: none;
-}
-.itmtk .table .popup .item.over {
-	background-color: #faffd1;
-}
-
 
 
 
