Paging table column select popup needed some images.
svn changeset:424 branch:toolkit

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -279,11 +279,13 @@ IMG.overlay {
 .itmtk .table .popup {
 	position: absolute;
 }
-.itmtk .table .popup .off {
+.itmtk .table .popup .off,
+.itmtk .table-paging .popup .off {
 	padding-left: 16px;
 	background: #ffffe1 url(../img/table/off.gif) no-repeat 0 0.2em;
 }
-.itmtk .table .popup .on {
+.itmtk .table .popup .on,
+.itmtk .table-paging .popup .on {
 	padding-left: 16px;
 	background: #ffffe1 url(../img/table/on.gif) no-repeat 0 0.2em;
 }
